--- a/src/main/webapp/i18n/de/userCustom.json
+++ b/src/main/webapp/i18n/de/userCustom.json
@@ -17,7 +17,9 @@
                 "title": "User Custom"
             },
             "bio": "Bio",
-            "user": "User"
+            "user": "User",
+            "follower": "Follower",
+            "followee": "Followee"
         }
     }
 }
