--- a/src/main/webapp/i18n/es/userCustom.json
+++ b/src/main/webapp/i18n/es/userCustom.json
@@ -18,7 +18,10 @@
             },
             "bio": "Bio",
             "user": "User",
+            "article": "Article",
+            "comment": "Comment",
             "follower": "Follower",
+            "favorite": "Favorite",
             "followee": "Followee"
         }
     }
