--- a/src/main/webapp/i18n/de/userCustom.json
+++ b/src/main/webapp/i18n/de/userCustom.json
@@ -16,6 +16,7 @@
             "detail": {
                 "title": "User Custom"
             },
+            "login": "Login",
             "bio": "Bio",
             "user": "User",
             "article": "Article",
