--- a/src/main/webapp/i18n/es/userCustom.json
+++ b/src/main/webapp/i18n/es/userCustom.json
@@ -1,29 +1,29 @@
 {
-    "greatBigExampleApplicationApp": {
-        "userCustom" : {
-            "home": {
-                "title": "User Customs",
-                "createLabel": "Crear nuevo User Custom",
-                "createOrEditLabel": "Crear o editar User Custom",
-                "search": "Search for User Custom"
-            },
-            "created": "Un nuevo User Custom ha sido creado con el identificador {{ param }}",
-            "updated": "Un User Custom ha sido actualizado con el identificador {{ param }}",
-            "deleted": "Un User Custom ha sido eliminado con el identificador {{ param }}",
-            "delete": {
-                "question": "¿Seguro que quiere eliminar User Custom {{ id }}?"
-            },
-            "detail": {
-                "title": "User Custom"
-            },
-            "login": "Login",
-            "bio": "Bio",
-            "user": "User",
-            "article": "Article",
-            "comment": "Comment",
-            "follower": "Follower",
-            "favorite": "Favorite",
-            "followee": "Followee"
-        }
+  "greatBigExampleApplicationApp": {
+    "author": {
+      "home": {
+        "title": "User Customs",
+        "createLabel": "Crear nuevo User Custom",
+        "createOrEditLabel": "Crear o editar User Custom",
+        "search": "Search for User Custom"
+      },
+      "created": "Un nuevo User Custom ha sido creado con el identificador {{ param }}",
+      "updated": "Un User Custom ha sido actualizado con el identificador {{ param }}",
+      "deleted": "Un User Custom ha sido eliminado con el identificador {{ param }}",
+      "delete": {
+        "question": "¿Seguro que quiere eliminar User Custom {{ id }}?"
+      },
+      "detail": {
+        "title": "User Custom"
+      },
+      "login": "Login",
+      "bio": "Bio",
+      "user": "User",
+      "article": "Article",
+      "comment": "Comment",
+      "follower": "Follower",
+      "favorite": "Favorite",
+      "followee": "Followee"
     }
+  }
 }
