--- a/src/main/webapp/i18n/de/global.json
+++ b/src/main/webapp/i18n/de/global.json
@@ -31,6 +31,7 @@
                 "game": "Spiel",
                 "heroes": "Helden",
                 "main": "Eigenschaften",
+                "meals": "Mahlzeiten",
                 "message": "Meldungen",
                 "notes": "Notizen",
                 "todo": "Dinge machen",
