--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -31,6 +31,7 @@
                 "game": "Juego",
                 "heroes": "Héroes",
                 "main": "Módulo",
+                "meals": "Comidas",
                 "message": "Mensajes",
                 "notes": "Notas",
                 "todo": "Cosas que hacer",
