--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -31,6 +31,7 @@
                 "game": "Game",
                 "heroes": "Heroes",
                 "main": "Features",
+                "meals": "Meals",
                 "message": "Messages",
                 "notes": "Notes",
                 "user": "User",
