--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -31,6 +31,7 @@
                 "dashboard": "Tableau de Bord",
                 "heroes": "Héros",
                 "main": "Fonctionnalité",
+                "meals": "Repas",
                 "message": "Messages",
                 "notes": "Remarques",
                 "todo": "Choses à faire",
