--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -21,6 +21,7 @@
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "features": {
+                "about": "Sobre",
                 "bernie": "Bernie",
                 "books": "Libros",
                 "booksFind": "Encontrar Libros",
@@ -30,6 +31,7 @@
                 "dashboard": "Tablero",
                 "game": "Juego",
                 "heroes": "Héroes",
+                "legal": "Legal",
                 "main": "Módulo",
                 "meals": "Comidas",
                 "message": "Mensajes",
